# context-engine

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python-package.yml  python-publish.yml
context_engine/: __init__.py  decorators.py  engine.py
context_engine/commands/: command_map.py
context_engine/commands/components/all/: __init__.py
context_engine/commands/expressions/: new_dict_function.py  new_list_function.py  set_function.py
context_engine/commands/expressions/all/: __init__.py
context_engine/commands/flows/: block_logic.py  do_while_logic.py  foreach_logic.py  if_logic.py  try_logic.py  while_logic.py
context_engine/commands/flows/all/: __init__.py
tests/: base_testing.py  test_context_engine.py  test_engine.py
